# Generated by Django 4.2 on 2025-05-21 18:07

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Carro',
            fields=[
                ('carro_ID', models.AutoField(primary_key=True, serialize=False)),
                ('modelo_carro', models.CharField(max_length=100)),
                ('montadora', models.CharField(max_length=100)),
                ('placa', models.CharField(max_length=10)),
                ('combustivel', models.CharField(max_length=50)),
                ('ano', models.IntegerField()),
            ],
        ),
        migrations.CreateModel(
            name='Cliente',
            fields=[
                ('cliente_ID', models.AutoField(primary_key=True, serialize=False)),
                ('nome', models.CharField(max_length=255)),
                ('email', models.EmailField(max_length=254)),
                ('cpf', models.CharField(max_length=14, unique=True)),
                ('telefone', models.CharField(max_length=15)),
            ],
        ),
        migrations.CreateModel(
            name='Endereco',
            fields=[
                ('endereco_ID', models.AutoField(primary_key=True, serialize=False)),
                ('cep', models.CharField(max_length=10)),
                ('rua', models.CharField(max_length=255)),
                ('bairro', models.CharField(max_length=100)),
                ('numero', models.CharField(max_length=15)),
                ('cidade', models.CharField(max_length=100)),
                ('estado', models.CharField(max_length=100)),
            ],
        ),
        migrations.CreateModel(
            name='Insumo',
            fields=[
                ('insumo_ID', models.AutoField(primary_key=True, serialize=False)),
                ('preco', models.FloatField()),
                ('qtd', models.IntegerField()),
                ('nome', models.CharField(max_length=255)),
                ('descricao', models.TextField()),
            ],
        ),
        migrations.CreateModel(
            name='Mecanico',
            fields=[
                ('mecanico_ID', models.AutoField(primary_key=True, serialize=False)),
                ('nome', models.CharField(max_length=255)),
                ('telefone', models.CharField(max_length=15)),
                ('email', models.EmailField(max_length=254)),
            ],
        ),
        migrations.CreateModel(
            name='Pagamento',
            fields=[
                ('pagamento_ID', models.AutoField(primary_key=True, serialize=False)),
                ('valor_final', models.FloatField()),
                ('valor_total', models.FloatField()),
                ('metodo_pagamento', models.CharField(max_length=255)),
                ('status', models.CharField(max_length=255)),
            ],
        ),
        migrations.CreateModel(
            name='Status',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('status', models.CharField(max_length=255)),
            ],
        ),
        migrations.CreateModel(
            name='Servico',
            fields=[
                ('servico_ID', models.AutoField(primary_key=True, serialize=False)),
                ('ativo', models.BooleanField(default=True)),
                ('diagnostico', models.TextField()),
                ('orcamento', models.FloatField()),
                ('descricao_servico', models.TextField()),
                ('data_entrada', models.DateField()),
                ('data_saida', models.DateField()),
                ('retornado', models.BooleanField(default=False)),
                ('carro', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='core.carro')),
                ('cliente', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='core.cliente')),
                ('mecanico', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='core.mecanico')),
                ('pagamento', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='core.pagamento')),
            ],
        ),
        migrations.AddField(
            model_name='cliente',
            name='endereco_ID',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='core.endereco'),
        ),
        migrations.AddField(
            model_name='carro',
            name='Customer_ID',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='core.cliente'),
        ),
    ]
